<!--
  ~ Copyright (c) 2020, Rafael Witak.
  -->

<resources>
    <string name="app_name">GymDataBro</string>
    <!-- Strings used for fragments for navigation -->

    <string name="rpe">RPE</string>
    <string name="duration">Duration (s)</string>
    <string name="rest">Rest (s)</string>
    <string name="notes">Notes</string>
    <string name="pain_level">Pain Level</string>
    <string name="none">none</string>
    <string name="max">max</string>
    <string name="next_step">Next Step</string>
    <string name="weight">Weight (kg)</string>
    <string name="reps">Reps</string>
    <string name="choose_program_toolbar_title">Choose Program</string>
    <string name="edit_program_label_name">Name</string>
    <string name="edit_program_label_source">Source</string>
    <string name="edit_program_label_links">Links</string>
    <string name="edit_program_label_info">Info</string>
    <string name="edit_program_label_notes">Notes</string>
    <string name="edit_program_button_save_text">Save &amp; Exit</string>
    <string name="edit_exercise_button_save_text">Save Exercise</string>
    <string name="edit_exercise_label_name">Name</string>
    <string name="edit_exercise_label_cues">Cues</string>
    <string name="edit_exercise_label_links">Links</string>
    <string name="edit_exercise_label_equipment">Equipment</string>
    <string name="edit_workout_step_label_name">Name</string>
    <string name="edit_workout_step_label_workout_id">WorkoutID</string>
    <string name="edit_workout_step_label_exercise_id">ExerciseID</string>
    <string name="edit_workout_step_label_reps">Reps</string>
    <string name="edit_workout_step_label_duration">Duration (s)</string>
    <string name="edit_workout_step_label_rest">Rest (s)</string>
    <string name="edit_workout_step_label_weight">Weight</string>
    <string name="edit_workout_step_label_rpe">RPE</string>
    <string name="edit_workout_step_label_details">Details</string>
    <string name="edit_workout_step_label_notes">Notes</string>
    <string name="edit_workout_step_button_save_exit_text">Save WorkoutStep &amp; Exit</string>
    <string name="edit_workout_step_label_number_sets">Number of Sets</string>
    <string name="edit_workout_step_button_save_add_more_text">Save &amp; Add More</string>
    <string name="cont_descr_main_bg">A gym bro showing his abs.</string>
    <string name="main_resume_button_text">Start Workout</string>
    <string name="main_choose_program_button_text">Choose Program</string>
    <string name="cont_desc_main_info_button">Info</string>
    <string name="workout_step_reality"><![CDATA[Reality ]]></string>
    <string name="step_explanation_goal"><![CDATA[Goal ]]></string>
    <string name="gymdatabro_logo">GymDataBro Logo</string>
    <string name="create_program_fab_content">Create new Program</string>
    <string name="create_program">Create Program</string>
    <string name="edit_program">Edit Program</string>
    <string name="add_workout">Add Workout</string>
    <string name="delete_program">Delete Program</string>
    <string name="delete_warning_message">Deleting this can not be undone!</string>
    <string name="delete_warning_title">WARNING</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unique_name_error">Enter a unique and meaningful name!</string>
    <string name="create_exit"><![CDATA[Create & Exit]]></string>
    <string name="save_exit"><![CDATA[Save & Exit]]></string>
    <string name="create_add_workout"><![CDATA[Create & Add Workout]]></string>
    <string name="title_workout_list">Workouts</string>
    <string name="title_workout_detail">Workout Detail</string>
    <string name="go_to_workouts">Go To Workouts</string>
    <string name="edit_workout_label_name">Name</string>
    <string name="edit_workout_label_details">Details</string>
    <string name="edit_workout_label_notes">Notes</string>
    <string name="edit_workout_button_save_text">Save &amp; Exit</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="create_workout">Create Workout</string>
    <string name="edit_workout">Edit Workout</string>
</resources>
