<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Rafael Witak.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditWorkoutStepActivity">

    <include
        android:id="@+id/edit_workout_step_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/edit_workout_step_body"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_workout_step_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_workout_step_toolbar">

        <ScrollView
            android:id="@+id/edit_workout_step_table_scrollview"
            style="@style/ResponsiveForeground"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/edit_workout_step_button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TableLayout
                android:id="@+id/edit_workout_step_table"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:isScrollContainer="true"
                android:orientation="vertical"
                android:stretchColumns="*">

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_name_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_name_edit"
                        android:text="@string/edit_workout_step_label_name" />

                    <EditText
                        android:id="@+id/edit_workout_step_name_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="textCapWords" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_number_sets_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_number_sets_picker"
                        android:text="@string/edit_workout_step_label_number_sets" />

                    <NumberPicker
                        android:id="@+id/edit_workout_step_number_sets_picker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6" />

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_workout_id_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_workout_id_edit"
                        android:text="@string/edit_workout_step_label_workout_id" />

                    <Spinner
                        android:id="@+id/edit_workout_step_workout_id_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/edit_workout_step_workout_id_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="number"
                        android:visibility="gone" />

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_exercise_id_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_exercise_id_edit"
                        android:text="@string/edit_workout_step_label_exercise_id" />

                    <Spinner
                        android:id="@+id/edit_workout_step_exercise_id_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/edit_workout_step_exercise_id_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="number"
                        android:visibility="gone" />

                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_reps_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_reps_edit"
                        android:text="@string/edit_workout_step_label_reps" />

                    <EditText
                        android:id="@+id/edit_workout_step_reps_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="number" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_duration_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_duration_edit"
                        android:text="@string/edit_workout_step_label_duration" />

                    <EditText
                        android:id="@+id/edit_workout_step_duration_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="number" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_rest_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_rest_edit"
                        android:text="@string/edit_workout_step_label_rest" />

                    <EditText
                        android:id="@+id/edit_workout_step_rest_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="number" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_weight_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_weight_edit"
                        android:text="@string/edit_workout_step_label_weight" />

                    <EditText
                        android:id="@+id/edit_workout_step_weight_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="numberDecimal" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_rpe_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_rpe_edit"
                        android:text="@string/edit_workout_step_label_rpe" />

                    <EditText
                        android:id="@+id/edit_workout_step_rpe_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="numberDecimal" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_details_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_details_edit"
                        android:text="@string/edit_workout_step_label_details" />

                    <EditText
                        android:id="@+id/edit_workout_step_details_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="textMultiLine" />
                </TableRow>

                <TableRow style="@style/TableRow">

                    <TextView
                        android:id="@+id/edit_workout_step_notes_label"
                        style="@style/TableRowLabel"
                        android:labelFor="@+id/edit_workout_step_notes_edit"
                        android:text="@string/edit_workout_step_label_notes" />

                    <EditText
                        android:id="@+id/edit_workout_step_notes_edit"
                        style="@style/TableRowEditText"
                        android:autofillHints="@null"
                        android:inputType="textMultiLine" />
                </TableRow>

            </TableLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_workout_step_button_container"
            app:layout_constraintTop_toBottomOf="@id/edit_workout_step_table_scrollview"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/edit_workout_step_button_save_exit"
                style="@style/PrimaryButton"
                android:text="@string/edit_workout_step_button_save_exit_text"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintBottom_toTopOf="@id/edit_workout_step_button_save_add_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_workout_step_button_save_add_more"
                style="@style/PrimaryButton"
                android:text="@string/edit_workout_step_button_save_add_more_text"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_workout_step_button_save_exit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>