<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Rafael Witak.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    android:backgroundTintMode="src_in"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/hd_vignette2"
        android:contentDescription="@string/cont_descr_main_bg" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="src_in"
        android:elevation="0dp"
        app:elevation="0dp"
        android:clickable="true"
        android:contentDescription="@string/cont_desc_main_info_button"
        android:focusable="true"
        android:onClick="toggleInfo"
        android:tint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <ScrollView
        android:id="@+id/main_info_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="0dp"
        android:background="@color/colorLightBackground"
        android:elevation="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gdb_logo"
        tools:visibility="invisible">

        <TextView
            android:id="@+id/main_info_box_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/info_copyright"
            android:textColor="@color/colorPrimaryDark" />

    </ScrollView>
<!--

    <TextView
        android:id="@+id/logo_gym_bro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:fontFamily="@font/bungee_inline_regular"
        android:includeFontPadding="true"
        android:lineSpacingMultiplier="1.1"
        android:lines="2"
        android:singleLine="false"
        android:text="@string/logo_text_gym_bro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="RedundantNamespace"
        tools:text="GYM\nBRO" />

    <TextView
        android:id="@+id/logo_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:fontFamily="@font/audiowide_regular"
        android:text="@string/logo_text_data"
        tools:text="data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/logo_gym_bro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo_gym_bro" />
-->

    <ImageView
        android:id="@+id/gdb_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:alpha=".72"
        android:contentDescription="@string/gymdatabro_logo"
        android:scaleType="centerInside"
        android:src="@drawable/gdb_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:ellipsize="none"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:hapticFeedbackEnabled="true"
        android:onClick="resumeWorkoutOrRedirect"
        android:text="@string/main_resume_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        android:theme="@style/Theme.MaterialComponents"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/main_choose_program_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gdb_logo"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_choose_program_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/montserrat"
        android:onClick="chooseProgram"
        android:text="@string/main_choose_program_button_text"
        android:textColor="@color/colorAccent"
        android:theme="@style/Theme.MaterialComponents"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_resume_button"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>