<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Rafael Witak.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.EditProgramActivity">

    <include
        android:id="@+id/edit_program_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/edit_program_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_program_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_program_toolbar">

        <ScrollView
            android:id="@+id/edit_program_table_scrollview"
            style="@style/BasicForeground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="110dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_program_button_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TableLayout
                android:id="@+id/edit_program_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:orientation="vertical"
                android:stretchColumns="*">
<!--
                TODO: Create unified style for rows, including:
                    * multi-line input
                    * smaller/adaptive label font
                    -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/edit_program_name_label"
                        android:layout_width="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:labelFor="@+id/edit_program_name_edit"
                        android:text="@string/edit_program_label_name"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <EditText
                        android:id="@+id/edit_program_name_edit"
                        android:layout_width="0dp"
                        android:layout_weight="1.618"
                        android:autofillHints="@null"
                        android:gravity="start"
                        android:inputType="textCapWords"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </TableRow>

                <TableRow android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/edit_program_source_label"
                        android:layout_width="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:labelFor="@+id/edit_program_source_edit"
                        android:text="@string/edit_program_label_source"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <EditText
                        android:id="@+id/edit_program_source_edit"
                        android:layout_width="0dp"
                        android:layout_weight="1.618"
                        android:autofillHints="@null"
                        android:gravity="start"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </TableRow>

                <TableRow android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/edit_program_links_label"
                        android:layout_width="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:labelFor="@+id/edit_program_links_edit"
                        android:text="@string/edit_program_label_links"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <EditText
                        android:id="@+id/edit_program_links_edit"
                        android:layout_width="0dp"
                        android:layout_weight="1.618"
                        android:autofillHints="@null"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </TableRow>

                <TableRow android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/edit_program_info_label"
                        android:layout_width="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:labelFor="@+id/edit_program_info_edit"
                        android:text="@string/edit_program_label_info"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <EditText
                        android:id="@+id/edit_program_info_edit"
                        android:layout_width="0dp"
                        android:layout_weight="1.618"
                        android:autofillHints="@null"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </TableRow>

                <TableRow android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/edit_program_notes_label"
                        android:layout_width="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:labelFor="@+id/edit_program_notes_edit"
                        android:text="@string/edit_program_label_notes"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <EditText
                        android:id="@+id/edit_program_notes_edit"
                        android:layout_width="0dp"
                        android:layout_weight="1.618"
                        android:autofillHints="@null"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </TableRow>

            </TableLayout>

        </ScrollView>

        <Button
            android:id="@+id/edit_program_button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="108dp"
            android:text="@string/edit_program_button_save_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_program_table_scrollview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>